@@ -144,6 +144,12 @@ header, footer, nav, section, article, hgroup, figure {
   }
 }
 
+@media all and (min-width: 66em) {
+  .hide-large-2 {
+    display: none;
+  }
+}
+
 .valid {
   color: #089e00;
 }
